# code-scanner

./: README.md  pyproject.toml
src/scanner/: cli.py  examiner.py  packages.py  paths.py
src/scanner/sitter/: java_examiner.py  node.py  typescript_examiner.py  xml_examiner.py
test/: json-context.xml  test_java_parsing.py  test_xml_parsing.py
test/java_test/test/: TestClass.java
